--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+1.3.1
+--------------
+- Relicensed from MPLv2.0 to GPLv3.0
+
 1.3.0
 --------------
 - Added new installation instructions to help users have a successful initial setup.
